--- a/gh-proxy/index.html
+++ b/gh-proxy/index.html
@@ -118,14 +118,16 @@
 <h1 style="margin-bottom: 50px"><img src="https://ae01.alicdn.com/kf/H2fc84859291347418b11091fe0e508b8v.png" style="width: 1.5em;margin-right: .2em;vertical-align: bottom;">GitHub 文件加速</h1>
 <form action="./" method="get" style="padding-bottom: 40px" target="_blank" class="flex">
     <label class="block" style="width: fit-content">
-        <input class="block url" name="q" type="text" placeholder="这里填入GitHub的链接喔!"
+        <input class="block url" name="q" type="text" placeholder="这里填入GitHub的链接喔ԅ(¯﹃¯ԅ)"
                pattern="^(?:(?:https|http):\/\/)?github\.com\/.+?\/.+?\/(?:releases|archive|blob)\/.+$" required>
         <div class="bar"></div>
     </label>
-    <input class="block btn" type="submit" value="点击下载">
+    <input class="block btn" type="submit" value="点击下载(●'◡'●)">
     <div class="tips"><p>GitHub文件链接带不带协议头都可以，支持release、archive以及文件，右键复制出来的链接都是符合标准的，更多用法、clone加速请参考<a href="https://hunsh.net/archives/23/">这篇文章</a>。</p>
-        <p>release、archive使用github.com.cnpmjs.org加速，文件会跳转至JsDelivr</p>
-        <p>注意，不支持项目文件夹</p></div>
+        <p>release、archive使用github.com.cnpmjs.org加速，文件会跳转至JsDelivrε=ε=ε=(~￣▽￣)~</p>
+        <p>对了哦，不支持项目文件夹,,ԾㅂԾ,,</p>
+        <p>对了哦，不支持项目文件夹_〆(´Д｀ )</p>u
+        <p>对了哦，不支持项目文件夹(￣▽￣)"</p></div>
     <div class="example">
         <p>分支源码：https://github.com/example/project/archive/master.zip</p>
         <p>release源码：https://github.com/example/project/archive/v0.1.0.tar.gz</p>
