--- a/gh-proxy/index.html
+++ b/gh-proxy/index.html
@@ -126,7 +126,7 @@
     <div class="tips"><p>GitHub文件链接带不带协议头都可以，支持release、archive以及文件，右键复制出来的链接都是符合标准的，更多用法、clone加速请参考<a href="https://hunsh.net/archives/23/">这篇文章</a>。</p>
         <p>release、archive使用github.com.cnpmjs.org加速，文件会跳转至JsDelivrε=ε=ε=(~￣▽￣)~</p>
         <p>对了哦，不支持项目文件夹,,ԾㅂԾ,,</p>
-        <p>对了哦，不支持项目文件夹_〆(´Д｀ )</p>u
+        <p>对了哦，不支持项目文件夹_〆(´Д｀ )</p>
         <p>对了哦，不支持项目文件夹(￣▽￣)"</p></div>
     <div class="example">
         <p>分支源码：https://github.com/example/project/archive/master.zip</p>
