--- a/gh-proxy/index.html
+++ b/gh-proxy/index.html
@@ -123,7 +123,7 @@
         <div class="bar"></div>
     </label>
     <input class="block btn" type="submit" value="点击下载(●'◡'●)">
-    <div class="tips"><p>GitHub文件链接带不带协议头都可以，支持release、archive以及文件，右键复制出来的链接都是符合标准的，或者直接在copy出来的url前加https://github.intel-2333.workers.dev即可<a href="https://hunsh.net/archives/23/">部署教程</a>。</p>
+    <div class="tips"><p>GitHub文件链接带不带协议头都可以，支持release、archive以及文件，右键复制出来的链接都是符合标准的，或者直接在copy出来的url前加https://github.intel-2333.workers.dev即可|<a href="https://hunsh.net/archives/23/">项目部署教程</a>。</p>
         <p>release、archive使用github.com.cnpmjs.org加速，文件会跳转至JsDelivrε=ε=ε=(~￣▽￣)~</p>
         <p>对了哦，不支持项目文件夹,,ԾㅂԾ,,</p>
         <p>对了哦，不支持项目文件夹_〆(´Д｀ )</p>
@@ -135,7 +135,7 @@
         <p>分支文件：https://github.com/example/project/blob/master/filename</p>
     </div>
 </form>
-<p style="position: sticky;top: calc(100% - 2.5em);">项目基于Cloudflare Workers，开源于GitHub <a style="color: #3294ea"
+<p style="position: sticky;top: calc(100% - 2.5em);">项目基于Cloudflare Workers<a style="color: #3294ea"
                                                                                          href="https://www.cattery.work">点我返回www.cattery.work</a>
 </p>
 </body>
